DataAccess arrangments were done

--- a/ProductCatalog.Entities/ProductCatalog.Entities.csproj
+++ b/ProductCatalog.Entities/ProductCatalog.Entities.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Abstract\" />
     <Folder Include="DTOs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProductCatalog.Core\ProductCatalog.Core.csproj" />
   </ItemGroup>
 
 </Project>
