--- a/ProductCatalog.Core/ProductCatalog.Core.csproj
+++ b/ProductCatalog.Core/ProductCatalog.Core.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="NHibernate" Version="5.3.13" />
+    <PackageReference Include="Npgsql" Version="6.0.6" />
+  </ItemGroup>
+
 </Project>
