--- a/ProductCatalog.DataAccess/ProductCatalog.DataAccess.csproj
+++ b/ProductCatalog.DataAccess/ProductCatalog.DataAccess.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstract\" />
-    <Folder Include="Concrete\NHibernate\Mappings\" />
+    <Folder Include="NHibernate\Mappings\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProductCatalog.Core\ProductCatalog.Core.csproj" />
+    <ProjectReference Include="..\ProductCatalog.Entities\ProductCatalog.Entities.csproj" />
   </ItemGroup>
 
 </Project>
