--- a/ProductCatalog.Core/ProductCatalog.Core.csproj
+++ b/ProductCatalog.Core/ProductCatalog.Core.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Npgsql" Version="6.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductCatalog.Entities\ProductCatalog.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
