--- a/ProductCatalog.DataAccess/ProductCatalog.DataAccess.csproj
+++ b/ProductCatalog.DataAccess/ProductCatalog.DataAccess.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="NHibernate\Mappings\" />
+    <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="NHibernate" Version="5.3.13" />
+    <PackageReference Include="Npgsql" Version="6.0.6" />
   </ItemGroup>
 
   <ItemGroup>
