Result classes added and ProductController/GetAll added

--- a/ProductCatalog.Business/ProductCatalog.Business.csproj
+++ b/ProductCatalog.Business/ProductCatalog.Business.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductCatalog.Core\ProductCatalog.Core.csproj" />
+    <ProjectReference Include="..\ProductCatalog.DataAccess\ProductCatalog.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
