--- a/ProductCatalog.WebAPI/ProductCatalog.WebAPI.csproj
+++ b/ProductCatalog.WebAPI/ProductCatalog.WebAPI.csproj
@@ -5,11 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="NHibernate" Version="5.3.13" />
+    <PackageReference Include="Npgsql" Version="6.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\ProductCatalog.Business\ProductCatalog.Business.csproj" />
   </ItemGroup>
 
 </Project>
