--- a/ProductCatalog.WebAPI/appsettings.json
+++ b/ProductCatalog.WebAPI/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "User ID=postgres;Password=hilal71OKTAY11;Server=localhost;Port=5432;Database=productcatalog;Integrated Security=true;Pooling=true;"
+  }
 }
