--- a/ProductCatalog.WebAPI/ProductCatalog.WebAPI.csproj
+++ b/ProductCatalog.WebAPI/ProductCatalog.WebAPI.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ProductCatalog.Business\ProductCatalog.Business.csproj" />
+    <ProjectReference Include="..\ProductCatalog.DataAccess\ProductCatalog.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
