business rules added

--- a/ProductCatalog.Business/ProductCatalog.Business.csproj
+++ b/ProductCatalog.Business/ProductCatalog.Business.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ValidationRules\FluentValidation\" />
+    <Folder Include="ValidationRules\CustomValidation\CategoryValidation\" />
   </ItemGroup>
 
 </Project>
