--- a/ProductCatalog.Core/ProductCatalog.Core.csproj
+++ b/ProductCatalog.Core/ProductCatalog.Core.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.1" />
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="FluentValidation" Version="11.2.2" />
     <PackageReference Include="NHibernate" Version="5.3.13" />
     <PackageReference Include="Npgsql" Version="6.0.7" />
   </ItemGroup>
