user login register procedure implmented

--- a/ProductCatalog.WebAPI/appsettings.json
+++ b/ProductCatalog.WebAPI/appsettings.json
@@ -1,14 +1,21 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "TokenOptions": {
+    "Audience": "berk@berk.com",
+    "Issuer": "berk@berk.com",
+    "AccessTokenExpiration": 5,
+    "SecurityKey": "paycorepaycorepaycorepaycorepaycore"
   },
-  "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "PostgreSqlConnection": "User ID=postgres;Password=hilal71OKTAY11;Server=localhost;Port=5432;Database=productcatalog;Integrated Security=true;Pooling=true;"
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+      "PostgreSqlConnection": "User ID=postgres;Password=hilal71OKTAY11;Server=localhost;Port=5432;Database=productcatalog;Integrated Security=true;Pooling=true;"
+    }
   }
-}
