--- a/ProductCatalog.WebAPI/ProductCatalog.WebAPI.csproj
+++ b/ProductCatalog.WebAPI/ProductCatalog.WebAPI.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
     <PackageReference Include="NHibernate" Version="5.3.13" />
     <PackageReference Include="Npgsql" Version="6.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
