--- a/ProductCatalog.Core/ProductCatalog.Core.csproj
+++ b/ProductCatalog.Core/ProductCatalog.Core.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Folder Include="DataAccess\NHibernate\" />
     <Folder Include="Entities\Concrete\" />
+    <Folder Include="LogService\" />
   </ItemGroup>
 
   <ItemGroup>
