--- a/ProductCatalog.DataAccess/ProductCatalog.DataAccess.csproj
+++ b/ProductCatalog.DataAccess/ProductCatalog.DataAccess.csproj
@@ -10,8 +10,12 @@
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="FluentNHibernate" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="NHibernate" Version="5.3.13" />
     <PackageReference Include="Npgsql" Version="6.0.7" />
+    <PackageReference Include="runtime.any.System.IO" Version="4.3.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
