--- a/ProductCatalog.WebAPI/appsettings.json
+++ b/ProductCatalog.WebAPI/appsettings.json
@@ -17,6 +17,20 @@
 
   "ConnectionStrings": {
     "PostgreSqlConnection": "User ID=postgres;Password=hilal71OKTAY11;Server=localhost;Port=5432;Database=pcauto;Integrated Security=true;Pooling=true;"
+  },
+
+  "AppSettings": {
+    "userName": "berk1994",
+    "userEmail": "berk.demircioglu1994@gmail.com",
+    "userPassword": "6271HO6271",
+    "adminUserEmail": "berk.demircioglu1994@gmail.com"
+  },
+
+  "Smtp": {
+    "Port": "587",
+    "Host": "smtp.gmail.com",
+    "Email": "Enter email adress",
+    "Password": "Enter password"
   }
 
 }
