--- a/ProductCatalog.WebAPI/appsettings.json
+++ b/ProductCatalog.WebAPI/appsettings.json
@@ -16,7 +16,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "PostgreSqlConnection": "User ID=postgres;Password=hilal71OKTAY11;Server=localhost;Port=5432;Database=pcauto;Integrated Security=true;Pooling=true;"
+    "PostgreSqlConnection": "User ID=postgres;Password=hilal71OKTAY11;Server=localhost;Port=5432;Database=productcatalog;Integrated Security=true;Pooling=true;"
   },
 
   "AppSettings": {
