--- a/ProductCatalog.WebAPI/appsettings.json
+++ b/ProductCatalog.WebAPI/appsettings.json
@@ -31,6 +31,36 @@
     "Host": "smtp.gmail.com",
     "Email": "Enter email adress",
     "Password": "Enter password"
+  },
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\pyc-log\\logs.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "ApplicationName": "Pyc"
+    }
   }
-
 }
