--- a/ProductCatalog.UnitTests/ProductCatalog.UnitTests.csproj
+++ b/ProductCatalog.UnitTests/ProductCatalog.UnitTests.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="FluentNHibernate" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="NHibernate" Version="5.3.13" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -25,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProductCatalog.Business\ProductCatalog.Business.csproj" />
     <ProjectReference Include="..\ProductCatalog.DataAccess\ProductCatalog.DataAccess.csproj" />
     <ProjectReference Include="..\ProductCatalog.Entities\ProductCatalog.Entities.csproj" />
   </ItemGroup>
