--- a/ProductCatalog.UnitTests/ProductCatalog.UnitTests.csproj
+++ b/ProductCatalog.UnitTests/ProductCatalog.UnitTests.csproj
@@ -13,7 +13,13 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="NHibernate" Version="5.3.13" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
+	  <PackageReference Include="NHibernate.ByteCode.LinFu" Version="3.3.3.4000" />
+    <PackageReference Include="NHibernate.ByteCode.LinFu" Version="1.1.0" />
+    <PackageReference Include="NHibernate.Castle" Version="3.1.0.4000" />
+    <PackageReference Include="NHibernate.Extensions.Sqlite" Version="6.0.11" />
+    <PackageReference Include="SQLite" Version="3.13.0" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.116" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.116" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -29,6 +35,7 @@
     <ProjectReference Include="..\ProductCatalog.Business\ProductCatalog.Business.csproj" />
     <ProjectReference Include="..\ProductCatalog.DataAccess\ProductCatalog.DataAccess.csproj" />
     <ProjectReference Include="..\ProductCatalog.Entities\ProductCatalog.Entities.csproj" />
+    <ProjectReference Include="..\ProductCatalog.WebAPI\ProductCatalog.WebAPI.csproj" />
   </ItemGroup>
 
 </Project>
